--- a/templates/UserProfile.html
+++ b/templates/UserProfile.html
@@ -7,6 +7,6 @@
 <body>
     <h1>Welcome {{ name }}!!!</h1>
     <p> <input type="hidden" value={{ id }} ></p>
-    Welcome here
+    Welcome , you have got bonus points
 </body>
 </html>
